Bug 364602 - JPA 2.0 - Support for embeddables + SWTBot tests
Change-Id: I887523e0610ee17dd7d8da0917de984021998d70