@@ -4,11 +4,12 @@
 	
 	<groupId>org.eclipse.jpt.jpadiagrameditor</groupId>
 	<artifactId>org.eclipse.jpt.jpadiagrameditor_parent</artifactId>
-	<version>1.1.0-SNAPSHOT</version>
+	<version>1.2.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	
 	<properties>
 		<tycho-version>0.15.0</tycho-version>
+		<tycho.testArgLine>-Xmx512m -Xms128m -XX:PermSize=32m -XX:MaxPermSize=256m -DenableDebug -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=1044</tycho.testArgLine>
 	</properties>
 	
 	<modules>
